# SpectralPlayground

./: CMakeLists.txt  README.md
Source/: AnalysisEngine.cpp  MainComponent.cpp  MainComponent.h  SpectralAsset.h  SpectralAssetWriter.cpp
docs/: overview.md
